[gd_scene load_steps=62 format=3 uid="uid://chngrknv0vy18"]

[ext_resource type="Script" path="res://src/enemy/shared/enemy.gd" id="1_6jtl6"]
[ext_resource type="Texture2D" uid="uid://dr8gwpuupso51" path="res://src/enemy/enemies/slime/slime.png" id="1_xm2ry"]
[ext_resource type="Script" path="res://src/enemy/shared/enemy_state_machine.gd" id="3_l0v3b"]
[ext_resource type="Script" path="res://src/enemy/shared/states/idle_state.gd" id="4_ipky7"]
[ext_resource type="Script" path="res://src/enemy/shared/states/walk_state.gd" id="5_11vw2"]
[ext_resource type="Script" path="res://src/enemy/shared/states/wander_state.gd" id="6_inij6"]
[ext_resource type="PackedScene" uid="uid://chp4s4sdxdsek" path="res://src/shared/hit_box/hitbox.tscn" id="7_dx876"]
[ext_resource type="Script" path="res://src/enemy/shared/states/hurt_state.gd" id="7_knuks"]
[ext_resource type="Script" path="res://src/enemy/shared/states/death_state.gd" id="8_32jnt"]
[ext_resource type="AudioStream" uid="uid://b0xjphroljt4p" path="res://src/enemy/enemies/slime/hit_00.wav" id="8_vevwi"]
[ext_resource type="Resource" uid="uid://dynuux8e8pqio" path="res://src/inventory/items/resources/items/gem.tres" id="10_8q88h"]
[ext_resource type="PackedScene" uid="uid://lfmfgs4jioxn" path="res://src/shared/hurt_box/hurtbox.tscn" id="10_tq8y8"]
[ext_resource type="Script" path="res://src/enemy/shared/drop.gd" id="11_vtpsd"]
[ext_resource type="Script" path="res://src/enemy/shared/enemy_animations_controller.gd" id="12_dp53k"]

[sub_resource type="CircleShape2D" id="CircleShape2D_7wuv8"]
radius = 4.0

[sub_resource type="Animation" id="Animation_8lv7h"]
resource_name = "RESET"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_uhotv"]
resource_name = "death"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [84, 85, 86, 87, 88]
}

[sub_resource type="Animation" id="Animation_p75h8"]
resource_name = "hurt_down"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [63, 64, 65]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Color(1, 1, 1, 0.717647), Color(0.882353, 0.176471, 0.517647, 0.584314), Color(1, 1, 1, 0.717647)]
}

[sub_resource type="Animation" id="Animation_t30cy"]
resource_name = "hurt_left"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [70, 71, 72]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Color(1, 1, 1, 0.717647), Color(0.882353, 0.176471, 0.517647, 0.584314), Color(1, 1, 1, 0.717647)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_xbbhl"]
resource_name = "hurt_right"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [70, 71, 72]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Color(1, 1, 1, 0.717647), Color(0.882353, 0.176471, 0.517647, 0.584314), Color(1, 1, 1, 0.717647)]
}

[sub_resource type="Animation" id="Animation_paxcm"]
resource_name = "hurt_up"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [77, 78, 79]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Color(1, 1, 1, 0.717647), Color(0.882353, 0.176471, 0.517647, 0.584314), Color(1, 1, 1, 0.717647)]
}

[sub_resource type="Animation" id="Animation_yxdym"]
resource_name = "idle_down"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_lpyc5"]
resource_name = "idle_left"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [7, 8, 9, 10]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_dyxsj"]
resource_name = "idle_right"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [7, 8, 9, 10]
}

[sub_resource type="Animation" id="Animation_c4ypq"]
resource_name = "idle_up"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [14, 15, 16, 17]
}

[sub_resource type="Animation" id="Animation_12hnr"]
resource_name = "jump_down"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [21, 22, 23, 24, 25, 26]
}

[sub_resource type="Animation" id="Animation_oayaa"]
resource_name = "jump_left"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [28, 29, 30, 31, 32, 33]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_8lt65"]
resource_name = "jump_right"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [28, 29, 30, 31, 32, 33]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_cg2mp"]
resource_name = "jump_up"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [35, 36, 37, 38, 39, 40]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lyji0"]
_data = {
"RESET": SubResource("Animation_8lv7h"),
"death": SubResource("Animation_uhotv"),
"hurt_down": SubResource("Animation_p75h8"),
"hurt_left": SubResource("Animation_t30cy"),
"hurt_right": SubResource("Animation_xbbhl"),
"hurt_up": SubResource("Animation_paxcm"),
"idle_down": SubResource("Animation_yxdym"),
"idle_left": SubResource("Animation_lpyc5"),
"idle_right": SubResource("Animation_dyxsj"),
"idle_up": SubResource("Animation_c4ypq"),
"jump_down": SubResource("Animation_12hnr"),
"jump_left": SubResource("Animation_oayaa"),
"jump_right": SubResource("Animation_8lt65"),
"jump_up": SubResource("Animation_cg2mp")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_n13pd"]
animation = &"death"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_o3qoa"]
blend_point_0/node = SubResource("AnimationNodeAnimation_n13pd")
blend_point_0/pos = 0.0
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_tc4sq"]
animation = &"hurt_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_c85pg"]
animation = &"hurt_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_aomaf"]
animation = &"hurt_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_y4xp4"]
animation = &"hurt_left"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_52cu2"]
blend_point_0/node = SubResource("AnimationNodeAnimation_tc4sq")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_c85pg")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_aomaf")
blend_point_2/pos = Vector2(0, -1)
blend_point_3/node = SubResource("AnimationNodeAnimation_y4xp4")
blend_point_3/pos = Vector2(-1, 0)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_s72y5"]
animation = &"idle_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_plt3h"]
animation = &"idle_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_p3c37"]
animation = &"idle_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_k3faf"]
animation = &"idle_left"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_dsxmf"]
blend_point_0/node = SubResource("AnimationNodeAnimation_s72y5")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_plt3h")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_p3c37")
blend_point_2/pos = Vector2(0, -1)
blend_point_3/node = SubResource("AnimationNodeAnimation_k3faf")
blend_point_3/pos = Vector2(-1, 0)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_kdqdi"]
animation = &"jump_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_6g3ov"]
animation = &"jump_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_e87xy"]
animation = &"jump_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_oxf1t"]
animation = &"jump_left"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_p4k06"]
blend_point_0/node = SubResource("AnimationNodeAnimation_kdqdi")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_6g3ov")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_e87xy")
blend_point_2/pos = Vector2(0, -1)
blend_point_3/node = SubResource("AnimationNodeAnimation_oxf1t")
blend_point_3/pos = Vector2(-1, 0)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_bf4bn"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_gggn4"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_m6tyg"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_y4w68"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_vxoel"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ppin1"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_js3rs"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_srmdq"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_0ujer"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_gmwi6"]
states/End/position = Vector2(935, 138)
states/Start/position = Vector2(177, 130)
states/death/node = SubResource("AnimationNodeBlendSpace1D_o3qoa")
states/death/position = Vector2(774, 138)
states/hurt/node = SubResource("AnimationNodeBlendSpace2D_52cu2")
states/hurt/position = Vector2(605, 138)
states/idle/node = SubResource("AnimationNodeBlendSpace2D_dsxmf")
states/idle/position = Vector2(406, 194)
states/walk/node = SubResource("AnimationNodeBlendSpace2D_p4k06")
states/walk/position = Vector2(406, 83)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_bf4bn"), "idle", "walk", SubResource("AnimationNodeStateMachineTransition_gggn4"), "walk", "idle", SubResource("AnimationNodeStateMachineTransition_m6tyg"), "idle", "hurt", SubResource("AnimationNodeStateMachineTransition_y4w68"), "hurt", "idle", SubResource("AnimationNodeStateMachineTransition_vxoel"), "walk", "hurt", SubResource("AnimationNodeStateMachineTransition_ppin1"), "hurt", "walk", SubResource("AnimationNodeStateMachineTransition_js3rs"), "hurt", "death", SubResource("AnimationNodeStateMachineTransition_srmdq"), "death", "hurt", SubResource("AnimationNodeStateMachineTransition_0ujer")]

[sub_resource type="Resource" id="Resource_2a0a2"]
script = ExtResource("11_vtpsd")
item = ExtResource("10_8q88h")
probability = 100.0
min_amount = 1
max_amount = 1

[sub_resource type="CircleShape2D" id="CircleShape2D_cym2m"]
radius = 64.0078

[sub_resource type="CircleShape2D" id="CircleShape2D_c54fi"]
radius = 4.0

[sub_resource type="CircleShape2D" id="CircleShape2D_fbu8g"]
radius = 5.0

[node name="Slime" type="CharacterBody2D"]
collision_layer = 256
collision_mask = 16
script = ExtResource("1_6jtl6")

[node name="Sprite2D" type="Sprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0.717647)
position = Vector2(0, -4)
texture = ExtResource("1_xm2ry")
hframes = 7
vframes = 13

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("CircleShape2D_7wuv8")

[node name="animator" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lyji0")
}

[node name="animator_tree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_gmwi6")
anim_player = NodePath("../animator")
parameters/death/blend_position = 0.000771046
parameters/hurt/blend_position = Vector2(0, 0)
parameters/idle/blend_position = Vector2(0, 0)
parameters/walk/blend_position = Vector2(0, 0)

[node name="state_machine" type="Node" parent="."]
script = ExtResource("3_l0v3b")

[node name="idle_state" type="Node" parent="state_machine"]
script = ExtResource("4_ipky7")

[node name="walk_state" type="Node" parent="state_machine"]
script = ExtResource("5_11vw2")

[node name="wander_state" type="Node" parent="state_machine"]
script = ExtResource("6_inij6")

[node name="hurt_state" type="Node" parent="state_machine"]
script = ExtResource("7_knuks")
recovery_fallback = 0.3
hurt_sound = ExtResource("8_vevwi")

[node name="death_state" type="Node" parent="state_machine"]
script = ExtResource("8_32jnt")
drops = Array[ExtResource("11_vtpsd")]([SubResource("Resource_2a0a2")])
knockback_speed = null
decelerate_speed = null

[node name="interactions" type="Node2D" parent="."]

[node name="agro_range" type="Area2D" parent="interactions"]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="interactions/agro_range"]
shape = SubResource("CircleShape2D_cym2m")
debug_color = Color(0, 0.64873, 0.170823, 0.42)

[node name="hit_box" parent="interactions" instance=ExtResource("7_dx876")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="interactions/hit_box"]
position = Vector2(0, -2)
shape = SubResource("CircleShape2D_c54fi")
debug_color = Color(0.956724, 0, 0.536406, 0.42)

[node name="hurt_box" parent="interactions" instance=ExtResource("10_tq8y8")]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="interactions/hurt_box"]
position = Vector2(0, -2)
shape = SubResource("CircleShape2D_fbu8g")
debug_color = Color(0.483781, 0.435883, 1, 0.42)

[node name="animations_controller" type="Node2D" parent="."]
script = ExtResource("12_dp53k")

[node name="audio" type="Node2D" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="audio"]
